proyectos/10/src/jackGrammarParser.py
# Generated from jackGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class jackGrammarParser ( Parser ):

    grammarFileName = "jackGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'static'", "'field'", 
                     "','", "';'", "'int'", "'char'", "'boolean'", "'constructor'", 
                     "'function'", "'method'", "'void'", "'('", "')'", "'var'", 
                     "'let'", "'['", "']'", "'='", "'if'", "'else'", "'while'", 
                     "'do'", "'return'", "'.'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "' | '", "'<'", "'>'", "'~'", "'true'", "'false'", 
                     "'null'", "'this'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KEYWORD", "SYMBOL", "INTEGER", "STRING", 
                      "COMMENT", "Identifier", "WHITESPACE" ]

    RULE_classNT = 0
    RULE_classVarDec = 1
    RULE_jackType = 2
    RULE_subroutineDec = 3
    RULE_parameterList = 4
    RULE_subroutineBody = 5
    RULE_varDec = 6
    RULE_className = 7
    RULE_subroutineName = 8
    RULE_varName = 9
    RULE_statements = 10
    RULE_statement = 11
    RULE_letStatement = 12
    RULE_ifStatement = 13
    RULE_whileStatement = 14
    RULE_doStatement = 15
    RULE_returnStatement = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_subroutineCall = 19
    RULE_expressionList = 20
    RULE_op = 21
    RULE_unaryOp = 22
    RULE_keywordConstant = 23

    ruleNames =  [ "classNT", "classVarDec", "jackType", "subroutineDec", 
                   "parameterList", "subroutineBody", "varDec", "className", 
                   "subroutineName", "varName", "statements", "statement", 
                   "letStatement", "ifStatement", "whileStatement", "doStatement", 
                   "returnStatement", "expression", "term", "subroutineCall", 
                   "expressionList", "op", "unaryOp", "keywordConstant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    KEYWORD=41
    SYMBOL=42
    INTEGER=43
    STRING=44
    COMMENT=45
    Identifier=46
    WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassNTContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameContext,0)


        def classVarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ClassVarDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ClassVarDecContext,i)


        def subroutineDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.SubroutineDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.SubroutineDecContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classNT

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassNT" ):
                listener.enterClassNT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassNT" ):
                listener.exitClassNT(self)




    def classNT(self):

        localctx = jackGrammarParser.ClassNTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classNT)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(jackGrammarParser.T__0)
            self.state = 49
            self.className()
            self.state = 50
            self.match(jackGrammarParser.T__1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4:
                self.state = 51
                self.classVarDec()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0):
                self.state = 57
                self.subroutineDec()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassVarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jackType(self):
            return self.getTypedRuleContext(jackGrammarParser.JackTypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classVarDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDec" ):
                listener.enterClassVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDec" ):
                listener.exitClassVarDec(self)




    def classVarDec(self):

        localctx = jackGrammarParser.ClassVarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classVarDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 66
            self.jackType()
            self.state = 67
            self.varName()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 68
                self.match(jackGrammarParser.T__5)
                self.state = 69
                self.varName()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JackTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_jackType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJackType" ):
                listener.enterJackType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJackType" ):
                listener.exitJackType(self)




    def jackType(self):

        localctx = jackGrammarParser.JackTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jackType)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(jackGrammarParser.T__7)
                pass
            elif token in [jackGrammarParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(jackGrammarParser.T__8)
                pass
            elif token in [jackGrammarParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(jackGrammarParser.T__9)
                pass
            elif token in [jackGrammarParser.Identifier]:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.className()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineName(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineNameContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(jackGrammarParser.ParameterListContext,0)


        def subroutineBody(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineBodyContext,0)


        def jackType(self):
            return self.getTypedRuleContext(jackGrammarParser.JackTypeContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDec" ):
                listener.enterSubroutineDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDec" ):
                listener.exitSubroutineDec(self)




    def subroutineDec(self):

        localctx = jackGrammarParser.SubroutineDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subroutineDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__13]:
                self.state = 84
                self.match(jackGrammarParser.T__13)
                pass
            elif token in [jackGrammarParser.T__7, jackGrammarParser.T__8, jackGrammarParser.T__9, jackGrammarParser.Identifier]:
                self.state = 85
                self.jackType()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.subroutineName()
            self.state = 89
            self.match(jackGrammarParser.T__14)
            self.state = 90
            self.parameterList()
            self.state = 91
            self.match(jackGrammarParser.T__15)
            self.state = 92
            self.subroutineBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jackType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.JackTypeContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.JackTypeContext,i)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = jackGrammarParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__7) | (1 << jackGrammarParser.T__8) | (1 << jackGrammarParser.T__9) | (1 << jackGrammarParser.Identifier))) != 0):
                self.state = 94
                self.jackType()
                self.state = 95
                self.varName()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==jackGrammarParser.T__5:
                    self.state = 97
                    self.match(jackGrammarParser.T__5)
                    self.state = 98
                    self.jackType()
                    self.state = 99
                    self.varName()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(jackGrammarParser.StatementsContext,0)


        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarDecContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarDecContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBody" ):
                listener.enterSubroutineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBody" ):
                listener.exitSubroutineBody(self)




    def subroutineBody(self):

        localctx = jackGrammarParser.SubroutineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subroutineBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(jackGrammarParser.T__1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__16:
                self.state = 109
                self.varDec()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.statements()
            self.state = 116
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jackType(self):
            return self.getTypedRuleContext(jackGrammarParser.JackTypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)




    def varDec(self):

        localctx = jackGrammarParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(jackGrammarParser.T__16)
            self.state = 119
            self.jackType()
            self.state = 120
            self.varName()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 121
                self.match(jackGrammarParser.T__5)
                self.state = 122
                self.varName()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(jackGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)




    def className(self):

        localctx = jackGrammarParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(jackGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(jackGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineName" ):
                listener.enterSubroutineName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineName" ):
                listener.exitSubroutineName(self)




    def subroutineName(self):

        localctx = jackGrammarParser.SubroutineNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subroutineName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(jackGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(jackGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)




    def varName(self):

        localctx = jackGrammarParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(jackGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = jackGrammarParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__17) | (1 << jackGrammarParser.T__21) | (1 << jackGrammarParser.T__23) | (1 << jackGrammarParser.T__24) | (1 << jackGrammarParser.T__25))) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.LetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.DoStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(jackGrammarParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = jackGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.letStatement()
                pass
            elif token in [jackGrammarParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.ifStatement()
                pass
            elif token in [jackGrammarParser.T__23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.whileStatement()
                pass
            elif token in [jackGrammarParser.T__24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.doStatement()
                pass
            elif token in [jackGrammarParser.T__25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(jackGrammarParser.VarNameContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)




    def letStatement(self):

        localctx = jackGrammarParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(jackGrammarParser.T__17)
            self.state = 150
            self.varName()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jackGrammarParser.T__18:
                self.state = 151
                self.match(jackGrammarParser.T__18)
                self.state = 152
                self.expression()
                self.state = 153
                self.match(jackGrammarParser.T__19)


            self.state = 157
            self.match(jackGrammarParser.T__20)
            self.state = 158
            self.expression()
            self.state = 159
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(jackGrammarParser.ExpressionContext,0)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementsContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementsContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = jackGrammarParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(jackGrammarParser.T__21)
            self.state = 162
            self.match(jackGrammarParser.T__14)
            self.state = 163
            self.expression()
            self.state = 164
            self.match(jackGrammarParser.T__15)
            self.state = 165
            self.match(jackGrammarParser.T__1)
            self.state = 166
            self.statements()
            self.state = 167
            self.match(jackGrammarParser.T__2)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jackGrammarParser.T__22:
                self.state = 168
                self.match(jackGrammarParser.T__22)
                self.state = 169
                self.match(jackGrammarParser.T__1)
                self.state = 170
                self.statements()
                self.state = 171
                self.match(jackGrammarParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(jackGrammarParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(jackGrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = jackGrammarParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(jackGrammarParser.T__23)
            self.state = 176
            self.match(jackGrammarParser.T__14)
            self.state = 177
            self.expression()
            self.state = 178
            self.match(jackGrammarParser.T__15)
            self.state = 179
            self.match(jackGrammarParser.T__1)
            self.state = 180
            self.statements()
            self.state = 181
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineCall(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineCallContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_doStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoStatement" ):
                listener.enterDoStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoStatement" ):
                listener.exitDoStatement(self)




    def doStatement(self):
